@@ -4,6 +4,12 @@ Changelog
 1.7 - Unreleased
 ================
 
+* Added support for genshi text templates. Use them with this as the
+  recipe:
+  `recipe = collective.recipe.template[genshi]:genshi`
+  Use a dot between the section name and the option name instead of a colon.
+  [fschulze]
+
 
 1.6 - 2010-02-24
 ================
